Agregados nuevos links a starbuzz

--- a/01-starbuzz/index.html
+++ b/01-starbuzz/index.html
@@ -20,10 +20,18 @@
   <p>Espresso, leche vaporizada y sirope de chocolate.</p>
 
   <h2>Cappuccino, $1.89</h2>
-  <p>AUna mezcla de espresso, leche vaporizada y espuma.</p>
+  <p>Una mezcla de espresso, leche vaporizada y espuma.</p>
 
-  <h2>Chai Tea, $1.85</h2>
+  <h2 id="chai">Chai Tea, $1.85</h2>
   <p>Una bebida especiada elaborada con té negro, especias, leche y miel.</p>
+
+  <p>
+    Lea acerca de <a href="./mission.html" title="Lea más sobre la importante misión de Starbuzz Coffee">nuesta
+      misión</a>.
+    <br>
+    Lea el <a href="http://wickedlysmart.com/buzz#Coffee" title="Lea todo sobre la cafeína en Buzz"
+      target="_blank">Caffeine Buzz</a>
+  </p>
 </body>
 
 </html>
